--- a/index.html
+++ b/index.html
@@ -5,89 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Side-by-Side Website Demo with Sync Toggle</title>
-    <style>
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        .container {
-            display: flex;
-            height: 100vh;
-        }
-
-        iframe {
-            width: 50%;
-            height: 100%;
-            border: none;
-        }
-
-        /* Divider between iframes */
-        .divider {
-            position: absolute;
-            left: 50%;
-            top: 0;
-            bottom: 0;
-            width: 2px;
-            background-color: #ccc;
-            z-index: 100;
-        }
-
-        #sync-toggle {
-            position: fixed;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            z-index: 1000;
-        }
-
-        #sync-toggle:active {
-            background-color: #0056b3;
-        }
-
-        /* Fake mouse cursor */
-        #fake-mouse {
-            position: absolute;
-            width: 12px;
-            height: 12px;
-            background-color: red;
-            border: 1.5px black solid;
-            border-radius: 50%;
-            pointer-events: none;
-            /* Ensure it doesn't interfere with clicks */
-            z-index: 9999;
-            display: none;
-            /* Hidden by default */
-        }
-
-        /* Refresh button */
-        #refresh-button {
-            position: fixed;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 10px 20px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            z-index: 1000;
-        }
-
-        #refresh-button:active {
-            background-color: #218838;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -99,148 +17,9 @@
         <iframe id="new"></iframe>
     </div>
 
-    <!-- Fake mouse cursor -->
     <div id="fake-mouse"></div>
 
-    <script>
-        const oldFrame = document.getElementById('old');
-        const newFrame = document.getElementById('new');
-        const syncToggle = document.getElementById('sync-toggle');
-        const refreshButton = document.getElementById('refresh-button');
-        const fakeMouse = document.getElementById('fake-mouse');
-
-        // Get URL parameters
-        const params = new URLSearchParams(window.location.search);
-        const oldDefault = params.get('old') || 'http://tickntrip-preprod.amiltone.com'
-        const newDefault = params.get('new') || 'http://tickntrip-staging.amiltone.com'
-
-        // Set iframe sources from parameters
-        oldFrame.src = oldDefault;
-        newFrame.src = newDefault;
-
-        let isSyncEnabled = true;
-        let oldRect, newRect;
-
-        // Store references to cleanup later
-        let mouseMoveListener = null;
-        let clickListener = null;
-        let scrollListener = null;
-
-        // Function to recalculate iframe positions
-        const recalculatePositions = () => {
-            oldRect = oldFrame.getBoundingClientRect();
-            newRect = newFrame.getBoundingClientRect();
-        };
-
-        // Function to setup event listeners
-        const setupListeners = () => {
-            // Remove existing listeners if they exist
-            if (mouseMoveListener) {
-                oldFrame.contentWindow.removeEventListener('mousemove', mouseMoveListener);
-            }
-            if (clickListener) {
-                oldFrame.contentWindow.removeEventListener('click', clickListener);
-            }
-            if (scrollListener) {
-                oldFrame.contentWindow.removeEventListener('scroll', scrollListener);
-            }
-
-            // Define new listeners
-            mouseMoveListener = (e) => {
-                if (!isSyncEnabled) return;
-                const x = e.clientX - oldRect.left;
-                const y = e.clientY - oldRect.top;
-
-                const newDoc = newFrame.contentDocument;
-                const element = newDoc.elementFromPoint(x, y);
-                if (element) {
-                    element.dispatchEvent(new MouseEvent('mousemove', { clientX: x, clientY: y }));
-                }
-
-                const newX = newRect.left + x;
-                const newY = newRect.top + y;
-                fakeMouse.style.left = `${newX}px`;
-                fakeMouse.style.top = `${newY}px`;
-                fakeMouse.style.display = 'block';
-            };
-
-            clickListener = (e) => {
-                if (!isSyncEnabled) return;
-                const x = e.clientX - oldRect.left;
-                const y = e.clientY - oldRect.top;
-                const newDoc = newFrame.contentDocument;
-                const element = newDoc.elementFromPoint(x, y);
-
-                if (element) {
-                    const event = document.createEvent("MouseEvent");
-                    event.initMouseEvent("click", true, true, window, null, x, y, 0, 0, false, false, false, false, 0, null);
-                    element.dispatchEvent(event);
-                }
-            };
-
-            scrollListener = (e) => {
-                if (!isSyncEnabled) return;
-                newFrame.contentWindow.scrollTo(
-                    oldFrame.contentWindow.scrollX,
-                    oldFrame.contentWindow.scrollY
-                );
-            };
-
-            // Add new listeners
-            oldFrame.contentWindow.addEventListener('mousemove', mouseMoveListener);
-            oldFrame.contentWindow.addEventListener('click', clickListener, true);
-            oldFrame.contentWindow.addEventListener('scroll', scrollListener);
-            oldFrame.contentWindow.addEventListener('visibilitychange', () => setTimeout(() => init(), 0));
-        };
-
-        // Function to initialize
-        const init = () => {
-            recalculatePositions();
-            setupListeners();
-        };
-
-        // Handle refresh
-        const refreshIframes = () => {
-            fakeMouse.style.display = 'none';
-            // Get the current URLs of the iframes
-            const oldUrl = oldFrame.contentWindow.location.href;
-            const newUrl = newFrame.contentWindow.location.href;
-
-            // Reload both iframes to their current URLs
-            oldFrame.src = "";
-            newFrame.src = "";
-            oldFrame.src = oldUrl === "about:blank" ? oldDefault : oldUrl;
-            newFrame.src = newUrl === "about:blank" ? newDefault : newUrl;
-
-            // Reinitialize after reload
-            let reloadCount = 0;
-            const handleReload = () => {
-                if (++reloadCount === 2) {
-                    fakeMouse.style.display = isSyncEnabled ? 'block' : 'none';
-                }
-            };
-
-            oldFrame.onload = handleReload;
-            newFrame.onload = handleReload;
-        };
-
-        // Initial load handlers
-        let initialLoadCount = 0;
-        const handleInitialLoad = () => {
-            if (++initialLoadCount === 2) init();
-        };
-
-        oldFrame.onload = handleInitialLoad;
-        newFrame.onload = handleInitialLoad;
-
-        document.addEventListener('resize', recalculatePositions);
-        refreshButton.addEventListener('click', refreshIframes);
-        syncToggle.addEventListener('click', () => {
-            isSyncEnabled = !isSyncEnabled;
-            syncToggle.textContent = isSyncEnabled ? 'Sync: On' : 'Sync: Off';
-            fakeMouse.style.display = isSyncEnabled ? 'block' : 'none';
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
